--- a/index.html
+++ b/index.html
@@ -3,15 +3,31 @@
   <head><title>IndexedDB note store</title></head>
   <body>
     <div id="app">
-      <div id="Entry">
-        <textarea id="newmessage"></textarea>
-        <button onclick="submitMove()" >Add move</button>
-      </div>
       <form id="Set Form">
-        <select id="selectNumber">
-          <option>Choose an exercise</option>
-        </select>
+        <fieldset>
+          <legend>Add a set to history.</legend>
+          <label for="selectExercise">Select exercise:
+            <select id="selectExercise" required>
+              <option value="" disabled selected hidden>Choose exercise.</option>
+            </select>
+          </label>
+
+          <label for="weightIn">Weight (kg):<input id="weightIn" type="number" name="weightIn" required /></label>
+
+          <label for="repIn">Reps:<input id="repIn" type="number" name="repIn" required /></label>
+
+          <button id="buttonSetForm">Submit</button>
+
+        </fieldset>
       </form>
+
+      <div id="Entry">
+        <fieldset>
+          <legend>Add a new excerise.</legend>
+          <textarea id="newMove" placeholder="Enter name of exercise." required></textarea>
+          <button onclick="submitMove()">Submit</button>
+      </fieldset>
+      </div>
     </div>
     <script src="db.js"></script>
   </body>
