--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
       </fieldset>
       </div>
     </div>
+    <div id="historyDiv">
+      <fieldset id="historyField">
+        <legend>Set History</legend>
+
+      </fieldset>
+
+    </div>
     <script src="db.js"></script>
   </body>
 </html>
