Adjusted time display

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </select>
           </label>
 
-          <label for="weightIn">Weight (kg):<input id="weightIn" type="number" name="weightIn" required /></label>
+          <label for="weightIn">Weight (kg):<input id="weightIn" type="float" name="weightIn" required /></label>
 
           <label for="repIn">Reps:<input id="repIn" type="number" name="repIn" required /></label>
 
@@ -43,7 +43,7 @@
               <th>Exercise</th>
               <th>Weight (kg)</th>
               <th>Reps</th>
-              <th>Date</th>
+              <th>Date and Time</th>
               <th>Action</th>
             </tr>
           </thead>
